--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "log4js": "^1.1.1",
     "shadowsocks": "^1.5.3",
     "throng": "^4.0.0",
-    "ws": "^2.2.3"
+    "ws": "^2.2.3",
+    "chatgpt":"^4.4.0",
+    "puppeteer":"^19.7.0"
   }
 }
